[package]
name = "options-common"
version = "0.5.1"
description = "Utilities for working with financial options"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/options-common-rs"
keywords = ["finance", "derivatives", "options"]
categories = ["mathematics"]
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4"
enum_dispatch = "0.3"
num-rational = "0.3"
num-traits = "0.2"
ordered-float = "2.0"
statrs = "0.13"
